*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8793 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -76,6 +76,8 @@ foxtrick.ForumYouthIcons.pre.desc=Lisää ikoni foorumin 'pre' formaatille
 foxtrick.ForumYouthIcons.table.desc=Lisää ikoni taulukolle. Custom tag accepts regular expresions (Mask  with additional , eg .).
 foxtrick.ForumYouthIcons.symbols.desc=Lisää kuvakkeen, josta voit lisätä allaolevia merkkejä. Erota merkit puolipisteillä. Lisätäksesi itse puolipisteen kirjoita /;
 foxtrick.ForumYouthIcons.settings.desc=Luo pikakuvakkeen Foxtrickin asetuksiin
+foxtrick.ForumYouthIcons.tournament.desc=Lisää kuvakkeen turnauksen ID\:lle (TournamentID)
+foxtrick.ForumYouthIcons.tournament_match.desc=Lisää kuvakkeen turnausottelun ID\:lle (TournamentMatchID)
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Korvaa FoxTrickin HT-ML-tagit HTML-tageilla (esim. 'pre'-elementti)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Näyttää sisäkkäiset lainaukset spoilerissa. Määritä taso alla.
@@ -85,6 +87,8 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Upotetut Youtube-videot
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Upotetut Vimeo-videot
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Upotetut FunnyOrDie-videot
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Upotetut Dailymotion-videot
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Käytä oEmbedia upottaaksesi mediatiedostoja (vain Chromessa) 
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Korvaa linkin teksti mediatiedoston otsikolla, esim. kuvan nimellä
 foxtrick.EmbedMedia.EmbedSoundCloud.desc=Upota Soundcloud
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Upota Flickr kuvia
 foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Upota Deviantart-kuvat
@@ -483,11 +487,14 @@ CopyPosting.style.raw=raw
 CopyPosting.style.last=last
 
 ForumYouthIcons.label=Junioritagit
+ForumYouthIcons.labelTournament=Turnaukset
 ForumYouthIcons.labelToolbar=Päätagit
 ForumYouthIcons.youthplayerid=Lisää junioripelaaja -tagi
 ForumYouthIcons.youthteamid=Lisää juniorijoukkue -tagi
 ForumYouthIcons.youthmatchid=Lisää linkki junioriotteluun
 ForumYouthIcons.youthseries=Lisää linkki juniorisarjaan
+ForumYouthIcons.tournamentid=Lisää turnaustagi.
+ForumYouthIcons.tournamentmatchid=Lisää turnausottelutagi.
 
 ForumOtherIcons.label=Muu
 ForumOtherIcons.settings=Aseta FoxTrickin määritykset.
@@ -561,9 +568,10 @@ matchOrder.noMatchSelected=Ottelua ei valittu
 matchOrder.comparedTo=Verrattuna\:
 matchOrder.previousPrediction=Edellinen ennustus
 matchOrder.AddMatchManually=Lisää ottelu manuaalisesti
-matchOrder.swapPositions=Vaihda pelipaikkaa
+matchOrder.swapPositions=Vaihda puolia
 matchOrder.options=Asetukset
 matchOrder.staminaDiscount=Kestävyysvähennys
+matchOrder.staminaDiscount.title=Sektoriarvosanoista vähennetään pelaajien tehojen jakautumisen mukaisesti sektoreittain
 matchOrder.summary=Yhteenveto
 
 #Skills
@@ -964,6 +972,7 @@ HTMSPrediction.changePrediction=Muuta arvio
 HTMSPrediction.team=Joukkue
 
 #htms table of statistical truth
+truthTable.table=HTMS Table of statistical truth
 truthTable.predicted_position=\#
 truthTable.name=Joukkue
 truthTable.real_position=Todellinen paikka.
@@ -1138,6 +1147,7 @@ foxtrick.prefs.saved=Asetukset tallennettu\!
 foxtrick.prefs.loaded=Asetukset ladattu\!
 foxtrick.prefs.dismissNotice=(click to dismiss this notice)
 
+pref.xmlLoad=Lataa XML\:stä lisätietoa Hattrickiin
 
 link.title=Linkit
 link.homepage=Kotisivu
@@ -1162,6 +1172,7 @@ about.translators=Kääntäjät
 about.designers=Muotoilijat
 
 prefs.view.by.category=Näytä kategorioittain
+prefs.view.by.page=Näytä viimeisen HT-sivun mukaan
 
 delete_foxtrick_branches_ask=Oletko varma, että haluat palauttaa oletusasetukset?\nFirefox täytyy uudelleenkäynnistää tämän aikaan saamiseksi\!
 disable_all_foxtrick_modules_ask=Oletko varma, että haluat kytkeä kaikki moduulit pois päältä?\n
