htlang.xml: Updates to galician and japanese
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8803 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/gl/htlang.xml
+++ b/content/locale/gl/htlang.xml
@@ -49,7 +49,7 @@
 
 	<!-- levels word connections appearing denominations page. copy "text" -->
 	<levels>
-		<level text="divino" value="20" />
+		<level text="caralludo" value="20" />
 		<level text="utópico" value="19" />
 		<level text="máxico" value="18" />
 		<level text="lendario" value="17" />
