*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8804 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -17,6 +17,8 @@ pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
+foxtrick.LineupShortcut.desc=Legg til en snarvei til lagoppstillingen på spillerens kamp historie
+foxtrick.SmallerPages.desc=Reduserer dimensjonen av noen sider til å tilpasse seg til små skjermer
 foxtrick.ForumTemplates.desc=Tillat omgjøring fra forumpost til mal for senere bruk
 foxtrick.ForumTemplates.DefaultShow.desc=Shows or hides your templates by default
 foxtrick.ForumPreview.desc=Tillat å vise en forhåndsvisning av en post (Fungerer også for HT-mail)
@@ -297,7 +299,7 @@ foxtrick.matchdetail.rightshort=H
 foxtrick.matchdetail.centershort=M
 foxtrick.matchdetail.leftshort=V
 foxtrick.matchdetail.ifkshort=I
-foxtrick.bidconfirmation=Er du sikker på at du vil by på denne spilleren? Pisen er %s.
+foxtrick.bidconfirmation=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
 foxtrick.tlconfirmation=Er du sikker på at du vil selge denne spilleren? Prisen er satt til %s.
 foxtrick.ntremoveconfirmation=Do you really want to add/remove this player from your squad?
 foxtrick.conferences.signaturetoggle=Signature
@@ -421,14 +423,35 @@ foxtrick.FlagCollectionToMap.World=Verden
 # TickerAlert
 
 # tickers
+ticker.type.welcome=Velkomstmelding
+ticker.type.transfer=Overgangs informasjon
+ticker.type.challenge=Utfordring
+ticker.type.guestbook=Gjestebok
+ticker.type.mail=HT-post
+ticker.type.others=Andre
 
 # LocalTime
+LocalTime.hattrick=Hattrick tid
+LocalTime.hattrick.title=Tid i Hattrick tidssone. Klikk klokken for å bytte til lokal tid.
+LocalTime.local=Lokal tid
+LocalTime.local.title=Tid i lokal tidssone. Klikk på klokken for å bytte til Hattrick tid.
 
 # Links
 
 #actions
+Copy=Kopier
+View=Vis
+Switch_view=Bytte visning
+Detach=Koble fra
+showTimeInClub=Vis tid i klubben
+sort.up=Opp
+sort.down=Ned
+action.clearCache=Tøm buffer
+featureHighlight.title=Klikk for å markere de fleste av FoxTrick funksjoner
 
 # fennec ui
+pageAction.mainContent=Vis hovedinnhold
+pageAction.all=Vis alle
 
 # buttons
 button.save=Lagre
@@ -490,5 +513,6 @@ delete_foxtrick_branches_ask=Are you sure you want to restore the default settin
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
 
 
+foxtrick.prefs.permissionsHint=%s trenger tillatelse til å arbeide. Tillat tilgang i følgende dialogboks. Hvis du avslår vil denne funksjonen bli deaktivert.
 
 ###EOF
