*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8805 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -910,7 +910,7 @@ foxtrick.FlagCollectionToMap.Africa=Africa
 foxtrick.FlagCollectionToMap.Asia=Asia
 foxtrick.FlagCollectionToMap.Europe=Europa
 foxtrick.FlagCollectionToMap.MEast=Medio Este
-foxtrick.FlagCollectionToMap.SAmerica=Sudamerica
+foxtrick.FlagCollectionToMap.SAmerica=Sudamérica
 foxtrick.FlagCollectionToMap.World=Mundo
 
 # SkillTable
