--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -29,13 +29,24 @@ foxtrick.MoveLinks.desc=Flytt managerens liga og flagglenker til meldingsetikett
 foxtrick.AttVsDef.desc=Legg en angrep/forsvars sammenligning til kampsiden
 foxtrick.AttVsDef.oldstyle.desc=gammel stil
 foxtrick.AttVsDef.newstyle.desc=ny stil
+foxtrick.AttVsDef.oldstyleifkseparated.desc=gammel stil (separat ind. dødballsituasjoner)
 #Ratings
 foxtrick.Ratings.desc=Legg til ratinger på kampsiden
+foxtrick.Ratings.HideAverages.desc=Skjul gjennomsnittlige karakterer
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaljert)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats separat per karakter
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Endre ikonet knyttet til et bokmerke ved å sette inn den tilsvarende koden i bokmerkekommentaren i klammer\: f.eks [cyan] viser cyan ikonet. Mulige verdier\: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Vis en median overgangssum i sammenlign overganger
 foxtrick.FlagCollectionToMap.desc=Vis et verdenskart med alle landene som du har samlet flaggene til i hver kategori
 foxtrick.TransferSearchFilters.desc=Tillat maler for overgangssøk
+foxtrick.TransferSearchResultFilters.desc=Ytterligere filtre for filtrering på søkeresultater
 foxtrick.TransferDeadline.desc=Legg til en ekstra linje på hvert søkeresultat i overgangsmarkedet med dager, timer og minutter til budfristen er over
 foxtrick.HTDateFormat.desc=Legg til den globale HT-uken og sesongen til de viktigste datoene på HT-siden
 foxtrick.HTDateFormat.LocalSeason.desc=Vis den lokale sesongen istedet for den globale sesongen
