--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -16,7 +16,7 @@
 	<note version="0.9">
 		<item><xhtml:b>Локализация:</xhtml:b></item>
 		<item>Внедрение краудсорсинговой службы перевода <xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a> (CatzHoek, Convincedd).</item>
-		<item>Большое количество обновлений переводов (Catzhoek многие переводчики. Среди прочих: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, Zayc).</item>
+		<item>Большое количество обновлений переводов (Catzhoek и многие переводчики. Среди прочих: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, TheZayc, -Iuve-, Mcload, Polytropos, MrAli, ripaldo, Ryo567, Louzao, kirja, MartinsPF).</item>
 		<item>Спасибо вам всем. Пожалуйста, продолжайте помогать переводить FoxTrick на сайте <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a>.</item>
 		<item>Для дополнительной информации о переводе смотрите сообщение [post=15466991.1] или [post=15466972.1].</item>
 		<item></item>
