*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8810 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -28,7 +28,6 @@ foxtrick.AddLeaveConfButton.desc=Tilføjer en  'Forlad konference' knap til hver
 foxtrick.StarsCounter.desc=Tilføjer det totale antal af stjerne til kampopstillingssiden
 foxtrick.MoveLinks.desc=Flytter managerens liga og flag links, til 'indlægs overskriften'. Husk\: 'Vis brugerikoner og info' funktionen i Hattrick  skal være sat til, for at det virker\!
 #AttVsDef
-
 foxtrick.AttVsDef.oldstyle.desc=gammel stil
 foxtrick.AttVsDef.newstyle.desc=ny stil
 foxtrick.AttVsDef.oldstyleifkseparated.desc=gamle stil (adskilt ind. dødbolde)
@@ -45,9 +44,7 @@ foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Skift symbolet som er knyttet til et bogmærke, ved at indsætte den tilsvarende kode imellem tegnet [...] i bogmærke kommentar feltet\: F.eks [cyan] vil vise cyan ikon. Mulige værdier\: aqua, B, sort, blå, brun, cyan, mørke lilla, grøn, idé, lyseblå, lysegrøn, orange, pink, lilla, rød, hvid, gul
 #MedianTransferPrice
-
 foxtrick.TransferSearchResultFilters.desc=Ekstra filtre til filtrering af transfer søgeresultater
-
 foxtrick.StaffMarker.manager.desc=Markere Funktionærer brugernavne på hold sider.
 foxtrick.StaffMarker.own.desc=Brugerdefinerede markører i JSON format med bruger-ID som nøgle og typografi som værdi, f.eks. {"1001"\: "farve\: rød;", "1002"\: "background-color\: yellow;"}
 foxtrick.StaffMarker.HT-Youthclub.desc=Markere HT-Youthclub personale
@@ -163,17 +160,11 @@ foxtrick.PlayerFilters.desc=﻿Tilføj på spillertrup side et tilvalgs felt til
 foxtrick.HistoryStats.desc=Udarbejder en oversigt over holdets historie.
 foxtrick.LargeFlags.desc=Forstør flag på spillerens side, hvis ansigter er vist (kan gå ned på GNU / Linux)
 foxtrick.GoToPostBox.desc=Tilføjer en GåTilIndlægX boks til forum side. Skjuler HT's 'Markere som ulæst fra'\!\!Du kan bruge 'Markér ulæst' modul til at have denne funktion i indlæggets fodnote.
-
+foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 #ExtendedPlayerDetails
-
 #ExtraShortcuts
 #CopyMatchID
-
-
 #MoveManagerOnline
-
-
-
 foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 #YouthSkillHideUnknown
 #HighlightCupwins
@@ -214,30 +205,26 @@ foxtrick.TeamStats.Pictures.label=Team Photo
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
-
+leave_conf_button=leave conference
 
 
 # ForumTemplates
 make_template_from_post=Lav skabeloner fra post
-
 template_exists=Skabelon eksisterer allerede eller er tom
-
+delete_template_ask=Slet skabelon?
 
 #PostPreview
 
-
 #Forums
 
-
+ForumYouthIcons.youthmatchid=add link to youth match
 
 
 #special bbcode, not really youth icons
 
 
 
-
 #Transferlistfilters
-
 
 #Filter
 
@@ -409,8 +396,6 @@ foxtrick.staffconfirmationsack=Ønsker du at fyr %num %slags?
 foxtrick.confirmstripserver=Ønsker du at fravælge hattrick serveren fra linkene for at gøre det anvendeligt i forum?
 foxtrick.conferences.signaturetoggle=Signatur
 foxtrick.conferences.markunread=Markere som ulæst herfra
-
-
 foxtrick.tweaks.BirthdayToday=Fødselsdage i dag
 foxtrick.ExtendedPlayerDetails.perseason=/ Sæson
 
@@ -670,6 +655,12 @@ pageAction.mainContent=Vis hovedindhold
 pageAction.leftSidebar=Vis venstre bjælke
 pageAction.all=Vis alt
 
+# buttons
+
+
+
+
+
 # End of IN-GAME STRINGS.
 
 
@@ -682,6 +673,17 @@ pageAction.all=Vis alt
 
 # tabs in preferences page
 #tabs
+
+
+# NOTE - please preserve the braces, inner content will be converted to link
+
+
+
+
+
+
+
+disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
 
 
 
