--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -79,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=Aggiunge l'incona per la tabella. Il tag per
 foxtrick.ForumYouthIcons.symbols.desc=Aggiungi le icone per i simboli sottostanti. Le voci sono separate dal punto e virgola. Per inserire il punto e virgola inserisci "/;".
 foxtrick.ForumYouthIcons.debug.desc=Aggiungi icona per il log di debug di FoxTrick
 foxtrick.ForumYouthIcons.settings.desc=Aggiungi icona per le preferenze di FoxTrick
+foxtrick.ForumYouthIcons.tournament.desc=Aggiunge icona per ID del torneo
+foxtrick.ForumYouthIcons.tournament_match.desc=Aggiunge icona per ID della partita del torneo
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Sostituisce le tag HT-ML di Foxtrick con tag HTML (cioè elementi 'pre')
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Mostra le citazioni nidificate in uno spoiler. Specifica il livello qui sotto.
@@ -488,11 +490,14 @@ CopyPosting.style.raw=in linea
 CopyPosting.style.last=ultimo
 
 ForumYouthIcons.label=Collegamenti della squadra giovanile
+ForumYouthIcons.labelTournament=Tornei
 ForumYouthIcons.labelToolbar=Collegamenti principali
 ForumYouthIcons.youthplayerid=Collegamento a giocatore della squadra giovanile
 ForumYouthIcons.youthteamid=Collegamento a squadra giovanile
 ForumYouthIcons.youthmatchid=Aggiunge icona collegamento a partita giovanile
 ForumYouthIcons.youthseries=Aggiunge icona collegamento a serie giovanile
+ForumYouthIcons.tournamentid=Inserire tag torneo.
+ForumYouthIcons.tournamentmatchid=Inserire tag per la partita del torneo.
 
 ForumOtherIcons.label=Altre
 ForumOtherIcons.debug=Inserire il registro di debug di FoxTrick.
