*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8812 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -160,6 +160,7 @@ foxtrick.PlayerFilters.desc=﻿Tilføj på spillertrup side et tilvalgs felt til
 foxtrick.HistoryStats.desc=Udarbejder en oversigt over holdets historie.
 foxtrick.LargeFlags.desc=Forstør flag på spillerens side, hvis ansigter er vist (kan gå ned på GNU / Linux)
 foxtrick.GoToPostBox.desc=Tilføjer en GåTilIndlægX boks til forum side. Skjuler HT's 'Markere som ulæst fra'\!\!Du kan bruge 'Markér ulæst' modul til at have denne funktion i indlæggets fodnote.
+foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
@@ -204,6 +205,7 @@ foxtrick.TeamStats.Pictures.label=Team Photo
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
+leave_conf_button=leave conference
 
 
 # ForumTemplates
@@ -215,7 +217,7 @@ delete_template_ask=Slet skabelon?
 
 #Forums
 
-
+ForumYouthIcons.youthmatchid=add link to youth match
 
 
 #special bbcode, not really youth icons
