*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8816 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -49,6 +49,7 @@ foxtrick.StaffMarker.manager.desc=Markere Funktionærer brugernavne på hold sid
 foxtrick.StaffMarker.own.desc=Brugerdefinerede markører i JSON format med bruger-ID som nøgle og typografi som værdi, f.eks. {"1001"\: "farve\: rød;", "1002"\: "background-color\: yellow;"}
 foxtrick.StaffMarker.HT-Youthclub.desc=Markere HT-Youthclub personale
 #ForumYouthIcons
+foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mails)
 foxtrick.ForumYouthIcons.q.desc=Tilføjer ikon for citat tags, hvis mangler
 foxtrick.ForumYouthIcons.user_id.desc=Tilføjer ikon for BrugerID
 foxtrick.ForumYouthIcons.kit_id.desc=Tilføjer ikon for KitID
@@ -159,6 +160,7 @@ foxtrick.PlayerFilters.desc=﻿Tilføj på spillertrup side et tilvalgs felt til
 foxtrick.HistoryStats.desc=Udarbejder en oversigt over holdets historie.
 foxtrick.LargeFlags.desc=Forstør flag på spillerens side, hvis ansigter er vist (kan gå ned på GNU / Linux)
 foxtrick.GoToPostBox.desc=Tilføjer en GåTilIndlægX boks til forum side. Skjuler HT's 'Markere som ulæst fra'\!\!Du kan bruge 'Markér ulæst' modul til at have denne funktion i indlæggets fodnote.
+foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
@@ -176,6 +178,8 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 #Embed Media
 
 #icons
+foxtrick.ExtraShortcuts.statistics=Statistics
+foxtrick.ExtraShortcuts.transfers=Transfers
 
 #HistoryStats
 
@@ -183,8 +187,14 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 #following string uses pluralForms
 
 # links
+foxtrick.links.boxheader=Links
 
 #teamstats+filters
+foxtrick.TeamStats.label=Team overview
+foxtrick.TeamStats.Cards.label=Cards
+foxtrick.TeamStats.Injured.label=Injured
+foxtrick.TeamStats.TransferListed.label=Transfer listed
+foxtrick.TeamStats.Pictures.label=Team Photo
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -195,6 +205,7 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
+leave_conf_button=leave conference
 
 
 # ForumTemplates
@@ -206,6 +217,7 @@ delete_template_ask=Slet skabelon?
 
 #Forums
 
+ForumYouthIcons.youthmatchid=add link to youth match
 
 
 #special bbcode, not really youth icons
@@ -219,6 +231,12 @@ delete_template_ask=Slet skabelon?
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
+foxtrick.datetimestrings.days=days
+foxtrick.datetimestrings.hours=h
+foxtrick.datetimestrings.minutes=m
+foxtrick.datetimestrings.short_seasons=s
+foxtrick.datetimestrings.short_weeks=w
+foxtrick.datetimestrings.short_days=d
 
 #Transfer prices
 transfercompare_medianprice=Median pris
@@ -391,7 +409,9 @@ foxtrick.balancedTrainer=En %s træner, der hverken er offensivt eller defensivt
 htLive=HT Live
 
 foxtrick.modules_allpages=Moduler kørende på alle sider
+HTLanguageChanged=You have set in Foxtrick main preferences to automatically adapt your foxtrick language. Your foxtrick language locale is now set to\: %s.
 
+Coach=Coach
 CurrentSquad=Nuværende trup
 
 # NOTE TO TRANSLATORS
@@ -407,6 +427,7 @@ ratings.GardierStats=GardierStats
 CopyRatings.both=Kopiere ratings (i HT-ML)
 CopyRatings.home=Kopiere hjemmehold ratings (i HT-ML)
 CopyRatings.away=Kopiere udehold ratings (i HT-ML)
+CopyRatings.copied=The Ratings have been copied to the clipboard.
 
 CopyYouth.trainingReport=Kopiere trænings rapport
 CopyYouth.trainingReport.copied=Træningsrapport er blevet kopieret.
@@ -459,14 +480,23 @@ copy.ht-ml=Kopier i HT-ML
 copy.table=Kopier skema i HT-ML
 
 #teampopups
+Manager=Manager
+Team=Team
 Matches=Kampe
 Players=Spillere
 last_5_ips=5 seneste indlogninger
 Guestbook=Gæstebog
+SendMessage=Send message
+Challenge=Challenge
+Achievements=Achievements
+TransferHistory=Transfer history
 TeamHistory=Klubhistorik
 NextMatch=Næste kamp
 AddNextMatch=Tilføj næste kamp til HT Live
+LastLineup=Last Lineup
 YouthMatches=Ungdomskampe
+more=more...
+less=less...
 TeamPopupLinks.prefsCaption=Linkindstillinger
 TeamPopupLinks.ShowByDefault=Vis som standard
 TeamPopupLinks.ShowOnMore=Vis mere
@@ -653,6 +683,7 @@ pageAction.all=Vis alt
 
 
 
+disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?\n
 
 
 
