*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8823 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -79,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=Adauga pictograma pentru tabel. Tag-urile cu
 foxtrick.ForumYouthIcons.symbols.desc=Adauga pictograma pentru simbolurile de mai jos. Intrarile sunt separate de punct si virgula. Pentru a utiliza puncta si virgula introduceti "/;".
 foxtrick.ForumYouthIcons.debug.desc=Adauga pictograma pentru log-ul debug al FoxTrick
 foxtrick.ForumYouthIcons.settings.desc=Adauga pictograma pentru setarile FoxTrick
+foxtrick.ForumYouthIcons.tournament.desc=Adauga pictograma pentru TournamentID
+foxtrick.ForumYouthIcons.tournament_match.desc=Adauga pictograma pentru TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML (adica element 'pre')
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Arata quote-urile intr-un spoiler.Specificati mai jos nivelul.
@@ -488,11 +490,14 @@ CopyPosting.style.raw=coloana
 CopyPosting.style.last=ultima
 
 ForumYouthIcons.label=Linkuri juniori
+ForumYouthIcons.labelTournament=Turnee
 ForumYouthIcons.labelToolbar=Linkuri principale
 ForumYouthIcons.youthplayerid=Adauga link pentru ID juniorului
 ForumYouthIcons.youthteamid=Adauga link pentru ID-ul echipei de juniori
 ForumYouthIcons.youthmatchid=Adauga link pentru meciurile juniorilor
 ForumYouthIcons.youthseries=Adauga link pentru seriile de juniori
+ForumYouthIcons.tournamentid=Introduceti tag-ul turneului.
+ForumYouthIcons.tournamentmatchid=Introduceti tag-ul meciului din turneu.
 
 ForumOtherIcons.label=Altele
 ForumOtherIcons.debug=Insereaza log-ul debug FoxTrick.
@@ -954,6 +959,8 @@ maximum=Maxim
 foxtrick.RapidId.ViewById=Vizualizeaza dupa ID
 Senior=Seniori
 Youth=Juniori
+Tournaments=Turnee
+Tournament=Turneu
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Schimba modul de vizualizare al tabelului.
