*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8838 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -593,6 +593,8 @@ match.pos.lf=Delantero izquierdo
 match.pos.mf=Delantero centro
 match.pos.rf=Delantero derecho
 
+match.role.setPieces=Lanzador de BP
+match.role.setPieces.abbr=SP
 match.role.captain=Capitán
 match.role.captain.abbr=Capi
 
@@ -645,6 +647,7 @@ Last_stars=Última calificación
 Last_stars.abbr=Cal
 Last_stars_EndOfGame=Ultimas estrellas al final de la partida
 Last_stars_decline=Último descenso estrella
+Last_stars_decline.abbr=Dif
 Last_position=Última posición
 Last_position.abbr=pos
 #following string uses pluralForms
@@ -917,6 +920,7 @@ HTMSPrediction.team=Equipo
 truthTable.predicted_position=\#
 truthTable.name=Equipo
 truthTable.real_points=Puntos reales
+truthTable.predicted_points=Puntos prev.
 truthTable.difference=±
 truthTable.notAvailableYet=Datos no disponibles aún. Ve a HTMS para crear los datos necesarios
 
