*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8839 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -36,14 +36,28 @@ foxtrick.Ratings.GardierStats.desc=GardierStats
 #MedianTransferPrice
 foxtrick.StaffMarker.HT-Youthclub.desc=Označi HT-Youthclub osebje
 #ForumYouthIcons
+foxtrick.ForumYouthIcons.user_id.desc=Doda ikono za UserID
+foxtrick.ForumYouthIcons.debug.desc=Doda ikono za FoxTrickov dnevnik razhroščevanja
+foxtrick.ForumYouthIcons.settings.desc=Doda ikono za FoxTrick nastavitve
+foxtrick.ForumYouthIcons.tournament.desc=Doda ikono za TournamentID
+foxtrick.ForumYouthIcons.tournament_match.desc=Doda ikono za TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Prikaže ugnezdene citate v skrivaču. Navedite stopnjo spodaj.
 #EmbedMedia
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Vgnezdi YouTube videe
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Vgnezdi Vimeo videe
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Vgnezdi FunnyOrDie videe
+foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Vgnezdi Dailymotion videe
 foxtrick.EmbedMedia.EmbedSoundCloud.desc=Vgnezdi Soundcloud
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Vgnezdi slike s Flickra
 foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Vgnezdi slike z Deviantarta
 #Forum direct page links
 #
+foxtrick.LinksFans.desc=Doda nekaj zunanjih povezav na stran z navijači
+foxtrick.LinksPlayers.desc=Doda nekaj zunanjih povezav na igralčeve strani
+foxtrick.LinksAchievements.desc=Doda nekaj zunanjih povezav na stran z dosežki
+foxtrick.LinksStaff.desc=Doda nekaj zunanjih povezav na stran osebja
+foxtrick.LinksClubTransfers.desc=Doda nekaj zunanjih povezav na stran s prestopi
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Pokaže samo divizijo.
 foxtrick.ConfirmActions.StaffChange.desc=Najemanje/odpuščanje osebja
@@ -123,6 +137,7 @@ foxtrick.MobileEnhancements.desc=Nabor izboljšav za mobilne naprave
 foxtrick.MatchOrderInterface.Specialties.desc=Pokaži posebnosti igralcev
 foxtrick.MatchSimulator.RatingsBelow.desc=Prikaži napovedi spodaj
 foxtrick.RatingsDisplay.desc=Prikaže povprečne ocene v drugačnem slogu
+foxtrick.RatingsDisplay.HatStats.desc=Kot HatStati
 
 # -----------------------------------------------------------------------------
 
@@ -158,9 +173,15 @@ foxtrick.TeamStats.label=Pregled ekipe
 foxtrick.TeamStats.PlayerNotToOld.label=Igralci < 19 let
 foxtrick.TeamStats.PlayerToOld.label=Igralci >\= 19 let
 foxtrick.TeamStats.Cards.label=Kartoni
+foxtrick.TeamStats.Injured.label=Poškodovan
 foxtrick.TeamStats.TransferListed.label=Na trgu prestopov
 foxtrick.TeamStats.Pictures.label=Obrazi
+foxtrick.TeamStats.PlayedLatest.label=Igral zadnjo tekmo
+foxtrick.TeamStats.NotPlayedLatest.label=Ni igral zadnje tekme
+foxtrick.TeamStats.NotTransferListed.label=Ni na trgu prestopov
+foxtrick.TeamStats.ActivePlayers.label=Aktivni igralci
 foxtrick.TeamStats.PurchasedPlayers.label=Kupljenih igralcev
+foxtrick.TeamStats.FilterFor=Filter za
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -174,6 +195,8 @@ foxtrick.seasonstats.goalminus=GA
 foxtrick.seasonstats.goaldiff=±
 foxtrick.seasonstats.home=H
 foxtrick.seasonstats.away=A
+foxtrick.seasonstats.league=Liga
+foxtrick.seasonstats.friendly=Prijateljske tekme
 foxtrick.seasonstats.cup=Pokal
 foxtrick.seasonstats.masters=Masters
 
@@ -188,6 +211,7 @@ foxtrick.LeagueNewsFilter.lineup_changes=Spremembe postavitve
 leave_conf_button_alert=Kliknite na gumb 'Shrani' na naslednji strani, če želite zapustiti ta forum.
 leave_conf_button=Zapusti forum
 
+forum.preferences=Nastavitve foruma
 
 # ForumTemplates
 show_templates=Pokaži predloge
@@ -201,6 +225,7 @@ template_title=Naslov predloge\:
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
 
+ForumYouthIcons.labelTournament=Turnirji
 ForumYouthIcons.youthplayerid=Vstavi oznako mladinca.
 ForumYouthIcons.youthteamid=Vstavi oznako mladinske ekipe.
 ForumYouthIcons.youthmatchid=Vstavi oznako mladinske tekme.
@@ -320,10 +345,14 @@ match.pos.rf=Desni napadalec
 match.role.setPieces=Izvajalec prostih strelov
 match.role.setPieces.abbr=SP
 match.role.captain=Kapetan
+match.role.captain.abbr=Kapet.
 
+match.player.unknown=Neznan igralec
 
 General=Splošno
 
+PlayerNumber=Igralčeva številka
+PlayerNumber.abbr=\#
 
 TSI=Total Skill Index
 TSI.abbr=TSI
@@ -331,22 +360,30 @@ TSI.abbr=TSI
 
 Personality=Osebnost
 Aggressiveness=Agresivnost
+Aggressiveness.abbr=Ag
 Honesty=Poštenost
 
 Leadership=Vodstvene sposobnosti
+Leadership.abbr=Vod
 Experience=Izkušnje
+Experience.abbr=IZ
 
 Stamina=Vzdržljivost
+Stamina.abbr=Stm
 Form=Pripravljenost
+Form.abbr=FO
 
 Loyalty=Pripadnost
 MotherClubBonus=Bonus matičnega kluba
+MotherClubBonus.abbr=MK
 
 Status=Stanje
 Status.abbr=Stanje
 
 Yellow_card=Rumen karton
+Yellow_card.abbr=R
 Red_card=Rdeč karton
+Red_card.abbr=D
 
 Speciality=Posebnost
 
@@ -400,10 +437,12 @@ foxtrick.matchdetail.defence=Obramba
 foxtrick.matchdetail.total=Skupno
 foxtrick.shortcut.matchlineup=postavitev
 
+foxtrick.matchdetail.leftshort=L
 foxtrick.tlconfirmation=Ali res želite dodati tega igralca na seznam prestopov? Izklicna cena je %s.
 foxtrick.staffconfirmationhire=Ali želite najeti %num %kind?
 foxtrick.staffconfirmationsack=Ali želite odpustiti %num %kind?
 foxtrick.conferences.signaturetoggle=Podpis
+foxtrick.conferences.markunread=Označi kot neprebrano od tu naprej
 foxtrick.tweaks.selectplayer=Izberi igralca
 foxtrick.linkscustom.selecticon=Izberi ikono
 foxtrick.linkscustom.addpersonallink=Dodaj osebno povezavo
@@ -422,6 +461,9 @@ foxtrick.tweaks.BirthdayLastWeek=Rojstni dnevi prejšnji teden
 foxtrick.tweaks.BirthdayNextWeek=Rojstni dnevi naslednji teden
 foxtrick.copymatchid=Kliknite, če želite kopirati matchID v odložišče
 
+foxtrick.defensiveTrainer=%s trener, ki je obrambno usmerjen.
+foxtrick.offensiveTrainer=%s trener, ki je napadalno usmerjen.
+foxtrick.balancedTrainer=%s trener, ki ni niti napadalno niti obrambno usmerjen.
 
 #following string uses pluralForms
 notify.newMail=Prejeli ste %s sporočilo.;Prejeli ste %s sporočili.;Prejeli ste %s sporočila.;Prejeli ste %s sporočil.
@@ -429,6 +471,7 @@ notify.newMail=Prejeli ste %s sporočilo.;Prejeli ste %s sporočili.;Prejeli ste
 
 htLive=HT Live
 
+foxtrick.modules_allpages=Moduli, ki se izvajajo na vseh straneh
 HTLanguageChanged=FoxTrick je zaznal spremembo jezika. Jezik FoxTricka je sedaj nastavljen na %s.
 
 Coach=Trener
@@ -437,6 +480,7 @@ CurrentSquad=Trenutna ekipa
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 foxtrick.tweaks.actions=Dejanja
+foxtrick.tweaks.writeinguestbook=Piši v knjigo gostov
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -456,10 +500,15 @@ CopyYouth.scoutComment=Kopiraj skavtov komentar
 CopyYouth.scoutComment.copied=Skavtov komentar je bil kopiran.
 CopyYouth.playerSource=Kopiraj igralčevo izvorno kodo
 CopyYouth.playerSource.copied=Igralčeva izvorna koda je bila kopirana.
+CopyYouth.goto=Pojdi na %s
 
+MatchReportFormat.MatchReport=Poročilo tekme
 MatchReportFormat.lineup=Postavitev 
+MatchReportFormat.kickOff=Začetek tekme
 MatchReportFormat.halfTime=Polčas
+MatchReportFormat.fullTime=Konec tekme
 MatchReportFormat.extraTime=Podaljški
+MatchReportFormat.penaltyShootOut=Izvajanje kazenskih strelov
 MatchReportFormat.result=Rezultat
 
 CopySelected.desc=Kopirajte izbor s Ctrl + C.
@@ -557,6 +606,8 @@ maximum=Največ
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Pogled po ID-ju
+Tournaments=Turnirji
+Tournament=Turnir
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Preklopi pogled tabele.
@@ -592,6 +643,7 @@ MyMonitor.header=Moj monitor
 #following string uses pluralForms
 MyMonitor.teams=%s ekipa v monitorju;%s ekipi v monitorju;%s ekipe v monitorju;%s ekip v monitorju
 MyMonitor.add=Spremljaj to ekipo
+MyMonitor.remove=Odstrani to ekipo iz mojega monitorja
 MyMonitor.removeTeam=Izberite ekipo, ki jo želite odstraniti\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.removeTeamFormat=%n (%t, \#%i)
@@ -668,8 +720,12 @@ status.unknown=Neznano
 status.unknown.abbr=?
 
 oauth.authorize=Dovolite FoxTricku da dostopa do podatkov o vaši ekipi
+oauth.why=Zakaj bi moral odobriti FoxTrick?
+oauth.link=Pridobi potrditveno kodo iz chpp.hattrick.org
 
+api.serverUnavailable=Strežnik ni na voljo
 
+exception.error=Napaka %s
 
 # End of IN-GAME STRINGS.
 
@@ -677,6 +733,7 @@ oauth.authorize=Dovolite FoxTricku da dostopa do podatkov o vaši ekipi
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
+foxtrick=FoxTrick
 preferences=Nastavitve
 foxtrick.prefs.preferences=FoxTrick nastavitve
 foxtrick.log.header=FoxTrick dnevnik
@@ -687,7 +744,16 @@ status.active=aktivno
 
 # tabs in preferences page
 #tabs
+tab.on_page=Moduli na tej strani
+tab.universal=Univerzalni moduli
+tab.informationAggregation=Združevanje informacij
+tab.shortcutsAndTweaks=Bližnjice in izboljšave
+tab.presentation=Predstavitev
+tab.matches=Tekme
 tab.forum=Forum
+tab.links=Povezave
+tab.changes=Spremembe
+tab.help=Pomoč
 
 foxtrick.prefs.setup.dateFormat=Oblika datuma
 foxtrick.prefs.setup.country=Država
